// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App.vue should match logged in snapshot 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <nav
      class="v-navigation-drawer v-navigation-drawer--close v-navigation-drawer--fixed v-navigation-drawer--is-mobile theme--light"
      style="height: 100vh; top: 0px; transform: translateX(-100%); width: 256px;"
    >
      <div
        class="v-navigation-drawer__content"
      >
        <div
          class="v-list v-sheet v-sheet--tile theme--light v-list--dense"
        >
          <a
            class="v-list-item v-list-item--link theme--light"
            tabindex="0"
          >
            <div
              class="v-list-item__icon"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-home theme--light"
              />
            </div>
             
            <div
              class="v-list-item__content"
            >
              <div
                class="v-list-item__title"
              >
                Home
              </div>
            </div>
          </a>
           
          <hr
            aria-orientation="horizontal"
            class="v-divider theme--light"
            role="separator"
          />
           
        </div>
      </div>
      <div
        class="v-navigation-drawer__border"
      />
    </nav>
     
    <header
      class="v-sheet v-sheet--tile theme--dark v-toolbar v-app-bar v-app-bar--fixed primary"
      style="height: 64px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;"
      title=""
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <button
          class="v-app-bar__nav-icon v-btn v-btn--flat v-btn--icon v-btn--round theme--dark v-size--default"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-menu theme--dark"
            />
          </span>
        </button>
         
        <div
          class="v-toolbar__title"
        >
          
        </div>
         
        <div
          class="spacer"
        />
         
        <div
          class="v-menu"
        >
          <button
            class="v-btn v-btn--flat v-btn--icon v-btn--round theme--dark v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <div
                class="v-avatar app-avatar"
                style="height: 48px; min-width: 48px; width: 48px;"
              >
                <span
                  class="accent--text headline"
                >
                  
                </span>
              </div>
            </span>
          </button>
          <!---->
        </div>
      </div>
    </header>
     
    <main
      class="v-content"
      style="padding: 64px 0px 0px 0px;"
    >
      <div
        class="v-content__wrap"
      />
    </main>
  </div>
</div>
`;

exports[`App.vue should match unloaded snapshot 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <!---->
     
    <header
      class="v-sheet v-sheet--tile theme--dark v-toolbar v-app-bar v-app-bar--fixed primary"
      style="height: 64px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;"
      title=""
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <!---->
         
        <div
          class="v-toolbar__title"
        >
          
        </div>
         
        <div
          class="spacer"
        />
         
        <!---->
      </div>
    </header>
     
    <main
      class="v-content"
      style="padding: 64px 0px 0px 0px;"
    >
      <div
        class="v-content__wrap"
      />
    </main>
  </div>
</div>
`;
